[package]
name = "udping"
version = "0.1.0"
edition = "2021"
description = "Send UDP ping packets to network hosts"
repository = "https://github.com/RunnningPig/udping"
homepage = "https://github.com/RunnningPig/udping"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
human-panic = "2.0.0"
